--- a/css/style.css
+++ b/css/style.css
@@ -336,8 +336,8 @@ p {
 }
 
 .btn-testi a {
-  background-color: var(--dark);
-  color: var(--light);
+  color: var(--dark);
+  border: 1px solid var(--dark);
   padding: 0.5rem 1rem;
   border-radius: 9px;
   font-size: 0.875rem;
@@ -347,8 +347,8 @@ p {
 
 .btn-testi a:hover {
   border: 1px solid var(--dark);
-  color: var(--dark);
-  background-color: transparent;
+  color: var(--light);
+  background-color: var(--dark);
 }
 
 /* about me section style */
